# digeizVideoReconstruction

./: .gitignore  CMakeLists.txt  README.md  config.sh  cppVersion.cpp  run.sh
data/: distanceMatDistance.txt
include/: corruptImages.hpp  ordering.hpp  ssim.hpp
scripts/: compareSSIM.py
src/: corruptImages.cpp  main.cpp  ordering.cpp  ssim.cpp  videoToImage.cpp
